cabal-version:      3.0
name:               JwtDecoder
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             IvanDimovSIT
maintainer:         ivan390@abv.bg
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable JwtDecoder
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        time ^>=1.14, 
        base ^>=4.18.3.0,
        JwtDecoder
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Decoder
    build-depends:    base ^>=4.18.3.0
    default-language: Haskell2010